# aws-iot-securetunneling-localproxy

./: .clang-format  .clang-tidy  .cmake-format.json  .cspell.json  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.versioning  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  THIRD_PARTY_LICENSES  V1WebSocketProtocolGuide.md  V2WebSocketProtocolGuide.md  V3WebSocketProtocolGuide.md  WebsocketProtocolGuide.md  coverity.json  cspell.json  docker-build.sh  docker-run.sh  flake.nix  nfpm.yaml  windows-localproxy-build.md
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/docker-images/: Dockerfile
.github/docker-images/base-images/amazonlinux/: Dockerfile
.github/docker-images/base-images/debian/: Dockerfile
.github/docker-images/base-images/debian-ubuntu/: Dockerfile
.github/docker-images/base-images/fedora/: Dockerfile  Dockerfile-CI-stage1  Dockerfile-CI-stage2  Dockerfile-CI-stage3
.github/docker-images/base-images/ubi8/: Dockerfile
.github/docker-images/base-images/ubuntu/: Dockerfile
.github/docker-images/bin-images/amazonlinux/: Dockerfile
.github/docker-images/bin-images/debian-ubuntu/: Dockerfile
.github/docker-images/bin-images/fedora/: Dockerfile
.github/docker-images/bin-images/ubi8/: Dockerfile
.github/docker-images/oss-compliance/: generate-oss-compliance.sh
.github/docker-images/oss-compliance/ build-from-source-packages/:  build-from-source-package-licenses.txt
.github/docker-images/oss-compliance/linux-packages/: dnf-packages.sh  dpkg-packages.sh  yum-packages.sh
.github/docker-images/oss-compliance/test/: test-oss-compliance.sh
.github/workflows/: base-images.yml  build-and-test.yml  build-release-artifacts.yml  build-release.yml  ci.yml  codeql.yml  notification.yml  release.yml  uat-and-release.yml  uat.yml
debian/: post-install
docs/: build-from-source.md  cli-options.md  docker-build.md  multi-port-tunneling.md  running-localproxy.md  security.md
example/crosscompile/: raspberry_pi_3_b_plus.cmake.tc
lib/boost/: Dockerfile
misc/: dictionary.txt  iwyu_mappings.yml
resources/: Message.proto
src/: InputValidation.cpp  InputValidation.h  LocalproxyConfig.h  ProxySettings.cpp  ProxySettings.h  TcpAdapterProxy.cpp  TcpAdapterProxy.h  TcpClient.h  TcpConnection.h  TcpServer.h  Url.cpp  Url.h  Version.h.in  WebProxyAdapter.cpp  WebProxyAdapter.h  WebSocketStream.cpp  WebSocketStream.h  main.cpp
src/config/: ConfigFile.cpp  ConfigFile.h
test/: AdapterTests.cpp  TestHttpServer.cpp  TestHttpServer.h  TestWebsocketServer.cpp  TestWebsocketServer.h  Url.cpp  WebProxyAdapterTests.cpp
uat/: README.md  run_uat.sh  test_lifecycle.sh  test_multiport.sh  test_ssh_connectivity.sh  test_v1_compat.sh
uat/lib/: common.sh
